Fix to hover on mobile(?)

--- a/src/components/ProjectDropdown.module.scss
+++ b/src/components/ProjectDropdown.module.scss
@@ -35,9 +35,8 @@ $left-padding: 25px;
 }
 
 .dropdown-text {
-  margin-top: 0;
+  margin: 0 $left-padding;
   padding-bottom: 10px;
-  margin-left: $left-padding;
   color: #ddd;
 
   font-size: 1em;
